# dmoe-pipeline

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example_doc.txt
src/dmoe/: __init__.py  augment.py  benchmark.py  inference.py  router.py  train.py
tests/: test_augment.py  test_router.py
