[project]
name = "dmoe-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
description = "Decoupled Mixture-of-Experts (DMoE) – Parametric Knowledge Injection on Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ivan", email = "you@example.com" }]

dependencies = [
    "mlx-lm>=0.22.0",
    "mlx>=0.26.0",
    "transformers>=4.48.0",
    "peft>=0.14.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.27.0",
    "tqdm>=4.67.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.0.0",
]
benchmark = [
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
]

[project.scripts]
dmoe-augment   = "dmoe.augment:main"
dmoe-build-idx = "dmoe.router:build_index_cli"
dmoe-train     = "dmoe.train:main"
dmoe-infer     = "dmoe.inference:main"
dmoe-bench     = "dmoe.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmoe"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dmoe --cov-report=term-missing"
